--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script>
         function ok(){
+        alert('PASTI BARU BANGUN YAHAHA!!');
         alert('AYOO SEMANGAT!!');
         alert('BENTAR LAGI LEGEND!!');
         alert('AYOO JANGAN NYERAH DULU:)');
@@ -19,7 +20,7 @@
         alert('YAKANN??');
         alert('IYA DONGS MASA NGGA');
         alert('CAPE? NGANTUK?');
-        alert('HELEH, PASTI TADI BUAT KOPI');
+        alert('MANA ADAA, MASIH SIANG INI');
         alert('tell me if u ready!');
         
         }
