--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
                 play.audio();
             }
             playsounds("seasons.mp3");
-        alert('PASTI BARU BANGUN YAHAHA!!');
+        alert('Hellow');
         alert('AYOO SEMANGAT!!');
         alert('BENTAR LAGI LEGEND!!');
         alert('AYOO JANGAN NYERAH DULU:)');
         alert('MEMANG BERAT TAPI KALO BARENGAN JADI RINGAN:)');
         alert('YAKANN??');
         alert('IYA DONGS MASA NGGA');
-        alert('CAPE? NGANTUK?');
-        alert('MANA ADAA, MASIH SIANG INI');
+        alert('CAPE?');
+        alert('SAMA');
+        alert('TAPI BOONG');
         alert('tell me if u ready!');
         
         }
